# custom_fedora

./: .gitignore  .gitlab-ci.yml  .releaserc  .releaserc.json  Dockerfile  README.md  build.sh  build_clean.sh  build_fedora.sh  build_test.sh  build_test_clean.sh  build_test_run.sh  fedora-kd-cinnamon.cfg  pre_build.sh  settings.sh
docs/: adding_repos.md  gnome_customization.md  (+2 more)
src/cli/: .gitignore  CMakeLists.txt  Dockerfile  PreLoad.cmake  README.md  build.sh  cppcheck_suppression.txt  hatter_cli.cpp  hatter_config_builder_parser.cpp  profile.sh  toml_parser.cpp
src/cli/assets/: valid_keyboard.txt  valid_language.txt  valid_timezone.txt
src/cli/build_variable/: CMakeLists.txt  build_variable.cpp
src/cli/build_variable/include/: build_variable.hpp
src/cli/build_variable_manager/: CMakeLists.txt  build_variable_manager.cpp
src/cli/build_variable_manager/include/: build_variable_manager.hpp
src/cli/config_builder/: CMakeLists.txt  config_builder.cpp
src/cli/config_builder/include/: config_builder.hpp
src/cli/config_decoder/: CMakeLists.txt  config_decoder.cpp
src/cli/config_decoder/include/: config_decoder.hpp
src/cli/example/: child_setting_1.toml  example_first_login.sh  example_setting.toml  post_no_chroot_script.sh  post_script.sh  user_file.txt
src/cli/example/child_path/: child_setting_2.toml
src/cli/formatter/: CMakeLists.txt  formatter.cpp
src/cli/formatter/include/: ascii_format.hpp  formatter.hpp
src/cli/hatter_config_type/: CMakeLists.txt  hatter_config_type.cpp
src/cli/hatter_config_type/include/: default_config.hpp  hatter_config_type.hpp
src/cli/logger/: CMakeLists.txt  logger.cpp
src/cli/logger/include/: logger.hpp
src/cli/raw_config_parser/: CMakeLists.txt  raw_config_parser.cpp  toml_section_parser.cpp  toml_section_parser.hpp  toml_utils.cpp  toml_utils.hpp
src/cli/raw_config_parser/build_process_handler/: CMakeLists.txt  build_process_handler.cpp
src/cli/raw_config_parser/build_process_handler/include/: build_process_handler.hpp
src/cli/raw_config_parser/build_process_handler/sanitize/: CMakeLists.txt  build_process_sanitize.cpp
src/cli/raw_config_parser/build_process_handler/sanitize/include/: build_process_sanitize.hpp
src/cli/raw_config_parser/build_process_handler/sanitize/test/: build_process_sanitize_test.cpp
src/cli/raw_config_parser/common/: CMakeLists.txt  error_report_type.cpp
src/cli/raw_config_parser/common/error/: CMakeLists.txt  error_report_file_type.cpp  error_report_section_type.cpp  error_report_type.cpp  error_type.cpp
src/cli/raw_config_parser/common/error/include/: error_report_base_type.hpp  error_report_file_type.hpp  error_report_section_type.hpp  error_report_type.hpp  error_type.hpp
src/cli/raw_config_parser/common/get/: CMakeLists.txt  common_get.cpp
src/cli/raw_config_parser/common/hatter_config_type/: CMakeLists.txt
src/cli/raw_config_parser/common/include/: error_report_type.hpp  error_type.hpp
src/cli/raw_config_parser/common/sanitize/: CMakeLists.txt  common_sanitize.cpp  unknown_value_sanitize.cpp
src/cli/raw_config_parser/common/test_utils/: CMakeLists.txt  raw_config_parser_test_utils.cpp
src/cli/raw_config_parser/common/toml_utils/: CMakeLists.txt  toml_utils.cpp
src/cli/raw_config_parser/common/utils/: CMakeLists.txt  raw_config_parser_utils.cpp
src/cli/raw_config_parser/distro_info_handler/: CMakeLists.txt  distro_info_handler.cpp
src/cli/raw_config_parser/distro_info_handler/get/: CMakeLists.txt  distro_info_get.cpp
src/cli/raw_config_parser/distro_info_handler/include/: distro_info_handler.hpp
src/cli/raw_config_parser/distro_info_handler/sanitize/: CMakeLists.txt  distro_info_sanitize.cpp
src/cli/raw_config_parser/image_info_handler/: CMakeLists.txt  image_info_handler.cpp
src/cli/raw_config_parser/image_info_handler/get/: CMakeLists.txt  image_info_get.cpp
src/cli/raw_config_parser/image_info_handler/include/: image_info_handler.hpp
src/cli/raw_config_parser/image_info_handler/sanitize/: CMakeLists.txt  image_info_sanitize.cpp
src/cli/raw_config_parser/include/: default_config.hpp  raw_config_parser.hpp
src/cli/raw_config_parser/misc_handler/: CMakeLists.txt  misc_handler.cpp  misc_sanitize.cpp
src/cli/raw_config_parser/misc_handler/include/: misc_handler.hpp
src/cli/raw_config_parser/misc_handler/misc_sanitize/: CMakeLists.txt  misc_sanitize.cpp
src/cli/raw_config_parser/misc_handler/sanitize/: CMakeLists.txt  misc_sanitize.cpp
src/cli/raw_config_parser/package_handler/: CMakeLists.txt  package_handler.cpp  package_sanitize.cpp
src/cli/raw_config_parser/package_handler/include/: package_handler.hpp
src/cli/raw_config_parser/package_handler/package_set_handler/: CMakeLists.txt  package_set_handler.cpp  package_set_sanitize.cpp  package_set_sanitize.hpp
src/cli/raw_config_parser/package_handler/sanitize/: CMakeLists.txt
src/cli/raw_config_parser/package_parser/: CMakeLists.txt  package_parser.cpp
src/cli/raw_config_parser/package_parser/include/: package_parser.hpp
src/cli/raw_config_parser/repo_handler/: CMakeLists.txt  repo_handler.cpp  repo_sanitize.cpp  repo_sanitize.hpp
src/cli/raw_config_parser/repo_handler/custom_repo_handler/: CMakeLists.txt  custom_repo_handler.cpp  custom_repo_sanitize.cpp  custom_repo_sanitize.hpp
src/cli/raw_config_parser/repo_handler/include/: repo_handler.hpp
src/cli/raw_config_parser/repo_parser/: CMakeLists.txt  repo_parser.cpp
src/cli/raw_config_parser/repo_parser/include/: repo_parser.hpp
src/cli/scripts/: build_mock.sh  build_utils.sh  exit_code.sh  general_utils.sh  hatter.sh  misc_utils.sh  mock_bootstrap.sh  mock_utils.sh  set_env_var.sh
src/cli/scripts/bootstrap/: dev_software_install.sh  mock_bootstrap.sh  mock_software_install.sh
src/cli/scripts/test/: user_random_file.txt
src/cli/scripts/test_build_dir/: mock.cfg
src/cli/scripts/test_build_dir/build_file/: env
src/cli/test_utils/: CMakeLists.txt  gmock_custom_main.cpp  gtest_custom_main.cpp
src/cli/utils/: CMakeLists.txt  utils.cpp
src/cli/utils/include/: ascii_code.hpp  ascii_format.hpp  utils.hpp
(+34 files in other folders)
